# Handex-Robots

./: README.md
Master/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Master/install/bringup_pkg/share/bringup_pkg/: local_setup.sh  package.sh  package.xml
Master/install/bringup_pkg/share/bringup_pkg/launch/: bringup.launch.py
Master/install/bringup_pkg/share/bringup_pkg/rviz/: adx_rviz.rviz
Master/install/dispatch_pkg/share/dispatch_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Master/install/dispatch_pkg/share/dispatch_pkg/cmake/: dispatch_pkgConfig.cmake
Master/install/map_pkg/share/map_pkg/: local_setup.sh  package.sh
Master/install/map_pkg/share/map_pkg/cmake/: map_pkgConfig.cmake
Master/install/mpc_pkg/share/mpc_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Master/install/mpc_pkg/share/mpc_pkg/cmake/: mpc_pkgConfig.cmake
Master/install/my_pkg/lib/my_pkg/: cpp_test
Master/install/my_pkg/share/my_pkg/: local_setup.sh  package.sh
Master/install/my_pkg/share/my_pkg/cmake/: ament_cmake_export_dependencies-extras.cmake  my_pkgConfig.cmake
Master/install/my_pkg/share/my_pkg/launch/: APF_MPC.launch.py
Master/install/my_pkg/share/my_pkg/rviz/: traj_opt_mpc.rviz
Master/install/my_tf_pkg/share/my_tf_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Master/install/my_tf_pkg/share/my_tf_pkg/cmake/: my_tf_pkgConfig.cmake
Master/install/path_pkg/share/path_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Master/install/path_pkg/share/path_pkg/cmake/: path_pkgConfig.cmake
Master/install/piper/share/piper/: package.sh
Master/install/piper_description/share/piper_description/: local_setup.sh  package.sh
Master/install/piper_gazebo/share/piper_gazebo/: local_setup.sh  package.sh
Master/install/piper_humble/share/piper_humble/: local_setup.sh  package.sh
Master/install/piper_msgs/share/piper_msgs/: local_setup.sh  package.sh
Master/install/piper_msgs/share/piper_msgs/cmake/: export_piper_msgs__rosidl_generator_cExport-noconfig.cmake  export_piper_msgs__rosidl_generator_cExport.cmake  export_piper_msgs__rosidl_generator_cppExport.cmake  export_piper_msgs__rosidl_generator_pyExport-noconfig.cmake  export_piper_msgs__rosidl_generator_pyExport.cmake  export_piper_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_piper_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_piper_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  piper_msgs__rosidl_typesupport_cExport.cmake  (+8 more)
Master/install/piper_mujoco/share/piper_mujoco/: local_setup.sh  package.sh
Master/install/piper_no_gripper_moveit/share/piper_no_gripper_moveit/: local_setup.sh  package.sh
Master/install/piper_with_gripper_moveit/share/piper_with_gripper_moveit/: local_setup.sh  package.sh
Master/install/py_task_handler/lib/py_task_handler/: task_handler
Master/install/py_task_handler/share/py_task_handler/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Master/install/rplidar_ros/share/rplidar_ros/: local_setup.sh  package.sh
Master/install/rrt_star/share/rrt_star/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Master/install/tracer_base/share/tracer_base/: local_setup.sh  package.sh
Master/install/tracer_msgs/share/tracer_msgs/: local_setup.sh  package.sh
Master/install/traj_opt/share/traj_opt/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
Master/install/traj_opt/share/traj_opt/cmake/: traj_optConfig.cmake
Master/install/ugv_sdk/share/ugv_sdk/: package.sh
Master/map/: my_map.pgm  my_map.yaml
Master/script/: my_slam_config.yaml  send_spin.sh
Master/src/algorithm/bringup_pkg/: CMakeLists.txt
Master/src/algorithm/dispatch_pkg/: CMakeLists.txt
Master/src/algorithm/dispatch_pkg/src/: dispatch_car.cpp  dispatch_car.save.cpp
Master/src/algorithm/map_pkg/: CMakeLists.txt  package.xml
Master/src/algorithm/map_pkg/src/: occupy_to_grid.cpp
Master/src/algorithm/mpc_pkg/: CMakeLists.txt
Master/src/algorithm/mpc_pkg/include/mpc_pkg/: mpc_diff_car.hpp
Master/src/algorithm/mpc_pkg/save/: mpc_diff_car.cpp  mpc_diff_car.hpp  mpc_diff_car2.cpp  opt_traj_mpc.cpp  opt_traj_mpc_last.cpp
Master/src/algorithm/mpc_pkg/src/: mpc_diff_car.cpp
Master/src/algorithm/mpc_pkg/test/: mpc_test.cpp  opt_traj_mpc.cpp  save_opt_traj_mpc.cpp
Master/src/algorithm/my_pkg/: CMakeLists.txt  package.xml
Master/src/algorithm/my_pkg/config/: grid_map.yaml
Master/src/algorithm/my_pkg/include/my_pkg/: AStar.cpp  AStar.hpp
Master/src/algorithm/my_pkg/plugins/: model_push.cc
Master/src/algorithm/my_pkg/rviz/: my_rviz.rviz
Master/src/algorithm/my_pkg/src/: A_star.cpp  cpp_test.cpp  grid_apf.cpp  laser.cpp  mpc.cpp  real_state.cpp  vis.cpp
Master/src/algorithm/my_tf_pkg/: CMakeLists.txt  package.xml
Master/src/algorithm/my_tf_pkg/src/: laser_tf.cpp
Master/src/algorithm/path_pkg/: CMakeLists.txt  package.xml
Master/src/algorithm/path_pkg/src/: stright_path.cpp
Master/src/algorithm/py_task_handler/: package.xml  setup.cfg
Master/src/algorithm/rrt_star/: CMakeLists.txt
Master/src/algorithm/rrt_star/src/: rrt_star.cpp
Master/src/algorithm/traj_opt/: CMakeLists.txt
Master/src/algorithm/traj_opt/include/gcopter/: trajectory.hpp
Master/src/algorithm/traj_opt/include/traj_opt/: mars_traj.hpp  mars_traj_opt.hpp
Master/src/algorithm/traj_opt/save/: main_test.cpp  traj_opt.cpp  traj_opt_last.cpp  traj_test.cpp
Master/src/algorithm/traj_opt/src/: mars_traj_opt.cpp  traj_opt.cpp  traj_test.cpp
Master/src/algorithm/traj_opt/test/: main_test.cpp  matlab_test.m
Master/src/matlab_job/: plot_odom_now.m  state_plot_save.m
Slave/dispatch_pkg/: package.xml
Slave/dispatch_pkg/src/: dispatch_car.cpp
Slave/task_handler/: setup.py
Slave/task_handler/task_handler/: task_handler_node.py
(+37 files in other folders)
