<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traj_opt</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="95029893+Rigelllll@users.noreply.github.com">humble2204</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>Eigen3</depend>
  <depend>visualization_msgs</depend>

  <depend>osqp-eigen</depend>

  <depend>tf2</depend>
  <depend>tf_geometry_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
